# edu_core/views/create_user/create_user.py
@@ -1,5 +1,5 @@
 from functools import reduce
-def Create_email(*args, **kwargs):  # pylint: disable=invalid-name
+def create_user(*args, **kwargs):  # pylint: disable=invalid-name
     """
     Note: replace below mock implementation with your actual implementation
 
